# axum-router

./: Cargo.toml  README.md
benchmark/: results  run.sh
examples/route_and_layer/: main.rs  middleware.rs
src/: box_service.rs  lib.rs  router.rs
