[package]
name = "axum-router"
version = "0.1.0"
edition = "2018"

[dependencies]
axum = "0.2"
bytes = "1"
futures-util = "0.3"
http = "0.2"
http-body = "0.4"
hyper = "0.14"
matchit = "0.4"
route-recognizer = "0.3"
sync_wrapper = "0.1"
tower-layer = "0.3"
tower-service = "0.3"

[dependencies.tower]
default-features = false
features = ["util"]
version = "0.4"

[dev-dependencies]
axum-server = "0.2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
tower = { version = "0.4", features = ["limit"] }
